# zmq_sdk

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  build.gradle  build.properties  build.properties.example.andriod  build.properties.example.linux-x86  build.properties.example.matrix  build.properties.example.win  build.properties.local.android  build.properties.local.example  build.properties.local.linux  build.properties.local.matrix  build.properties.local.win  make_version.sh  pre.sh
cmake/: hobot_util.cmake
example/: CMakeLists.txt
example/ZMQServerUI/: CMakeLists.txt  ZMQServerUi.cc  mainwindow.cc  mainwindow.h  moc_mainwindow.cc
include/HobotDataTransfer/: HobotDataTransfer.h
include/HobotNetwork/: HobotNetworkBase.h  HobotNetworkInstance.h  HobotZmqClient.h  HobotZmqServer.h
include/HobotProtocol/: HobotProtocolRead.h  HobotProtocolWrite.h
include/TimeSync/: TimeSync.h
include/base/: base.h
include/utils/: CommunicationProtocol.h
include/zmq_sdk/: myapi.h
prebuild/: moc
src/: CMakeLists.txt  myapi.cpp  symbols.lst
src/HobotDataTransfer/: CMakeLists.txt
src/HobotDataTransfer/DispatchModule/: CMakeLists.txt  DispatchModule.cc  DispatchModule.h
src/HobotDataTransfer/ReceiveModule/: CMakeLists.txt  ReceiveModule.cc  ReceiveModule.h
src/HobotDataTransfer/SendModule/: CMakeLists.txt  SendModule.cc  SendModule.h
src/HobotDataTransfer/main/: CMakeLists.txt  HobotDataTransfer.cc
src/HobotDataTransfer/message/: BuffMsg.h  mempool.h
src/HobotNetwork/: CMakeLists.txt  HobotClientBase.cc  HobotClientBase.h  HobotNetworkBase.cc  HobotNetworkInstance.cc  HobotServerBase.cc  HobotServerBase.h  HobotZmqClient.cc  HobotZmqServer.cc  HobotZmqServer.h  symbols.lst
src/HobotProtocol/: CMakeLists.txt  HobotProtocolRead.cc  HobotProtocolWrite.cc
src/TimeSync/: CMakeLists.txt  TimeSync.cc
src/utils/: CMakeLists.txt  CommunicationProtocol.cc
test/: CMakeLists.txt
test/client_receive/: CMakeLists.txt  client_receive.cc
test/client_receive_ui/: CMakeLists.txt  client_receive_ui.cc
test/client_send/: CMakeLists.txt  client_send.cc
test/testClient/: CMakeLists.txt  testClient.cc
test/testComProtocol/: CMakeLists.txt  testComProtocol.cc
test/testHobotClient/: CMakeLists.txt  testHobotClient.cc
test/testHobotDataTransfer/: CMakeLists.txt  testTranClient.cc  testTranServer.cc  testTranSyncRecv.cc  testTransfer.cc
test/testHobotNetInstance/: CMakeLists.txt  testHobotNetInstance.cc
test/testHobotProtocol/: CMakeLists.txt  testHobotProtocol.cc
test/testHobotServer/: CMakeLists.txt  testHobotServer.cc
test/testMonitor/: CMakeLists.txt  testMonitor.cc
test/testReceiveMatrix/: CMakeLists.txt  DMSSDKOutput.pb.cc  DMSSDKOutput.pb.h  DMSSDKOutput.proto  protocol.h  statusRenderHelper.cc  statusRenderHelper.h  testReceiveMatrix.cc
test/testServer/: CMakeLists.txt  testServer.cc
test/testSpeech/: CMakeLists.txt  hobotSpeechAPI.h  hobotdefine.h  testMatrixServer.cc  testPcClient.cc
test/testSpeech/time_sync/: time_sync.cpp  time_sync.h
test/testSpeechopti/: CMakeLists.txt  testPcClientOpti.cc
test/testTimeSync/: CMakeLists.txt  testTimeSync.cc
