cmake_minimum_required(VERSION 3.0)
include(cmake/hobot_util.cmake)
project(multi_modal)

#include(config.cmake)
#set(CMAKE_CXX_COMPILER /usr/bin/g++-4.9)
#set(CMAKE_C_COMPILER /usr/bin/gcc-4.9)

message("config types: ${CMAKE_CONFIGURATION_TYPES}")
message("platform is ${_PLATFORM}")
message("architecture is ${_ARCHITECTURE}")
message("install dir is ${_INSTALL_DIR}")

set(PROJECT_ROOT ${PROJECT_SOURCE_DIR})
# set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_INSTALL_PREFIX ${_INSTALL_DIR})
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-unused-function")
set(zmq_sdk_INCLUDE_DIRS ${PROJECT_ROOT}/include )
set(TRANSFER_PROJECT_DIRS ${PROJECT_ROOT}/src/HobotDataTransfer )
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
add_definitions(-DHR_${_PLATFORM})
add_definitions(-DHR_${_ARCHITECTURE})
add_definitions(-DHR_POSIX)
add_definitions(-DHR_LINUX)
add_definitions(-DDMS_TIME_DEBUG)
add_definitions(-DPROC_NAME_ENABLE)
add_definitions("-Wall -g")
#add_definitions("-unresolved-symbols=ignore-in-shared-libs")
#add_definitions("--no-undefined")

add_subdirectory(src)
add_subdirectory(test)

#if(${platform} STREQUAL "linux" AND ${architecture} STREQUAL "x86" AND ${vendor} STREQUAL "default")
    #add_subdirectory(example)
#endif()
install(FILES "${PROJECT_ROOT}/include/HobotDataTransfer/HobotDataTransfer.h" DESTINATION include)