include_directories(${zmq_sdk_INCLUDE_DIRS})
add_subdirectory(testClient)
add_subdirectory(testServer)

#if(${platform} STREQUAL "linux" AND ${architecture} STREQUAL "x86" AND ${vendor} STREQUAL "default")
#    add_subdirectory(client_receive_ui)
#endif()

add_subdirectory(testHobotServer)
add_subdirectory(testHobotClient)
#add_subdirectory(testComProtocol)
add_subdirectory(testHobotNetInstance)
add_subdirectory(testHobotProtocol)
add_subdirectory(testHobotDataTransfer)
#add_subdirectory(testSpeech)
#add_subdirectory(testSpeechopti)
#add_subdirectory(testTimeSync)
add_subdirectory(testMonitor)
add_subdirectory(testReceiveMatrix)